@@ -1,6 +1,7 @@
 # Sally - A Tool for Embedding Strings in Vector Spaces
 # Copyright (C) 2010 Konrad Rieck (konrad@mlsec.org)
 
-EXTRA_DIST = sally_struct2mat.m
+EXTRA_DIST = sally_struct2mat.m sally_sparsematrix.r
+
 
 	        
