@@ -1,6 +1,7 @@
 function [X,Y,S,F] = sally_struct2mat(fvec)
 % Converts a Matlab structure generated by Sally to individual 
 % matrices and cell arrays.
+% Copyright (c) 2010 Konrad Rieck (konrad@mlsec.org)
 %
 % Input:
 %  fvec   - Structure generated by Sally
